# ProteoStorm

./: README.md
NCBI_taxonomy_xml/: Note.txt
RefUP++_Database/: Note.txt
example/: Note.txt
src/: 364106_IL_transformed.fasta  CalculatePeptideMass.py  ComputeFDR.py  CoreModule1_CreateDBPartitions.py  CoreModule1_CreateSpectralPartitions.py  CoreModule2and3_PepFilter_pValueComputation.py  CreateRefinedProtDB_genus.py  CreateRefinedProtDB_peptide.py  InSilicoDigest.py  MSGF_C57.txt  MSGF_C57_TMT.txt  PSM_output.py  Preprocessing.py  ProteoStorm.py  ProteoStormModules.py  S2_peplevelFDR.py
src/CoreModule2_PeptideFiltering/: AlignmentUtils.cpp  AlignmentUtils.h  BaseGraph.cpp  BaseGraph.h  CMakeLists.txt  DatabaseIndex.cpp  DatabaseIndex.h  DeconvSpectrum.cpp  DeconvSpectrum.h  DelimitedTextReader.cpp  DelimitedTextReader.h  Edge.cpp  Edge.h  ExecBase.cpp  ExecBase.h  ExecDeconvoluteMS2.cpp  ExecDeconvoluteMS2.h  ExecMergeConvert.cpp  ExecMergeConvert.h  ExecTagFilterPairs.cpp  ExecTagFilterPairs.h  FileUtils.cpp  FileUtils.h  FilterableGraph.cpp  FilterableGraph.h  HashHeap.h  IonMass.cpp  IonMass.h  IsoEnvelope.cpp  IsoEnvelope.h  Logger.cpp  Logger.h  MathUtils.cpp  MathUtils.h  Node.cpp  Node.h  ParameterList.cpp  ParameterList.h  PepnovoTags.cpp  PepnovoTags.h  (+50 more)
src/DBmassDistributions/: Note.txt
